# siromixv2

./: .dockerignore  .env.example  .gitignore  COMPLETION_SUMMARY.md  LOCALHOST_STARTUP.md  README.md  test_oauth_flow.ps1  test_phase2.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  test_db_creation.py  test_phase2_docker.py  test_phase2_manual.py  test_retry_flow.ps1
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial.py  002_add_exams_and_artifacts_tables.py  d504c08365f1_add_duration_minutes_to_exam_and_make_.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: exams.py  me.py  tasks.py
backend/app/core/: artifact_paths.py  auth.py  config.py  database.py  deps.py  middleware.py  redis.py  storage.py
backend/app/models/: __init__.py  artifact.py  exam.py  task.py  task_log.py  user.py
backend/app/schemas/: __init__.py  artifact.py  exam.py  task.py  task_log.py  user.py
backend/app/services/: exam_service.py  task_log_service.py  task_service.py  user_service.py
backend/app/tasks/: celery_app.py  pipeline_stages.py  process_task.py
backend/scripts/: benchmark_performance.py  create_test_artifact.py  create_test_exam.py  e2e_validation.md  test_cascade_delete.py  test_migration.md  test_relationships.py
backend/tests/: __init__.py  conftest.py  test_storage_phase1.py  utils.py
backend/tests/contract/: __init__.py  test_create_task.py  test_exams_post.py  test_get_task.py  test_me_endpoint.py  test_retry_task.py
backend/tests/integration/: __init__.py  test_artifact_relationships.py  test_auth_flow.py  test_exam_cascade_delete.py  test_exam_creation_flow.py  test_failure_retry.py  test_full_lifecycle.py  test_retry_flow.py
backend/tests/unit/: __init__.py  test_auth.py  test_retry_logic.py  test_task_log_model.py  test_task_model.py  test_user_model.py
backend/tests/unit/core/: test_storage.py
backend/tests/unit/models/: test_artifact.py  test_exam.py  test_task_exam_fk.py
backend/tests/unit/schemas/: __init__.py  test_artifact_schema.py  test_exam_schema.py
backend/tests/unit/services/: test_exam_service.py
frontend/: .env.local.example  .eslintrc.js  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/tests/: setup.ts  utils.ts
html/SiroMix - Exam Analysis Result/: index.html
html/SiroMix - Exam Detail/: index.html
html/SiroMix - Homepage/: index.html
html/SiroMix - Login Screen/: index.html
html/SiroMix - Task Management/: index.html
html/SiroMix- Create New Exam/: index.html
infra/: .env.example  docker-compose.yml
specs/001-mvp-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ui-mock-mvp/: bundle-optimization-report.md  data-model.md  e2e-testing-checklist.md  examples.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+127 files in other folders)
